[Test] SellerOrderService 단위 테스트 실패 오류 수정 및 검증 로직 최신화 (#616)
[test] SellerOrderService 단위 테스트 실패 오류 수정 및 검증 로직 최신화